--- a/hello-service/src/main/resources/application.yml
+++ b/hello-service/src/main/resources/application.yml
@@ -8,6 +8,6 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://peer1:8761/eureka/,http://peer2:8762/eureka/
+      defaultZone: http://localhost:8761/eureka/
   instance:
     preferIpAddress: true
