--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 	<modules>
 		<module>discovery-eureka</module>
         <module>hello-service</module>
+		<module>config-server-eureka</module>
 	</modules>
 
 	<dependencyManagement>
