apply docker-compose & remove eureka from config-server

--- a/client-ui/src/main/resources/bootstrap.yml
+++ b/client-ui/src/main/resources/bootstrap.yml
@@ -4,16 +4,14 @@ spring:
   cloud:
     config:
       profile: dev
-      discovery:
-        enabled: true
-        serviceId: config-server-eureka
+      uri: http://localhost:8040/
 
 eureka:
   client:
-    serviceUrl:
+    service-url:
       defaultZone: http://localhost:8761/eureka/
     instance:
-        preferIpAddress: true
+      preferIpAddress: true
 ribbon:
   eureka:
     enabled: true
