--- a/discovery-eureka/src/main/resources/application.yml
+++ b/discovery-eureka/src/main/resources/application.yml
@@ -9,3 +9,4 @@ eureka:
     fetch-registry: false
     service-url:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+spring.cloud.config.discovery.enabled: true
